[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "network-wrangler"
version = "0.3.0"
description = ""
license =  {file = "LICENSE"}
readme = "README.md"
authors = [
    { name = "Elizabeth Sall", email = "elizabeth@urbanlabs.io" },
    { name = "Sijia Wang", email = "Sijia.Wang@wsp.com"},
    { name = "Lisa Zorn", email = "lzorn@bayareametro.gov"},
    { name = "Ashish Kulshrestha", email = "Ashish.Kulshrestha@wsp.com"}
]

classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D103", "D106", "D101", "D104", "D100"]
"**/__init__.py" = ["F401", "F403"]
"test_dependencies.py" = ["F401"]
"bin/*.py" = ["E501"]

